fix(v-counter): fix spacing/rtl styles

--- a/src/stylus/components/_text-fields.styl
+++ b/src/stylus/components/_text-fields.styl
@@ -61,6 +61,10 @@ v-text-field-rtl()
   .v-label
     transform-origin: top right
 
+  .v-counter
+    margin-left: 0
+    margin-right: 8px
+
   &--enclosed
     .v-input__append-outer
       margin-left: 0
@@ -113,6 +117,7 @@ rtl(v-text-field-rtl, "v-text-field")
     padding-left: 4px
 
   .v-counter
+    margin-left: 8px
     white-space: nowrap
 
   .v-label
